--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "private": true,
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=22 <25"
   },
+  "engineStrict": true,
   "dependencies": {
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
